--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,414 @@
 include: package:flutter_lints/flutter.yaml
+
+# Additional information about this file can be found at
+# https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+
+  errors:
+    always_use_package_imports: error
+    avoid_dynamic_calls: error
+    avoid_print: error
+    avoid_empty_else: error
+    avoid_relative_lib_imports: error
+    avoid_slow_async_io: error
+    avoid_type_to_string: error
+    avoid_types_as_parameter_names: error
+    avoid_web_libraries_in_flutter: error
+    cancel_subscriptions: error
+    close_sinks: error
+    collection_methods_unrelated_type: error
+    # comment_references: error
+    control_flow_in_finally: error
+    deprecated_member_use_from_same_package: warning
+    # discarded_futures: error
+    empty_statements: error
+    hash_and_equals: error
+    implicit_reopen: error
+    invalid_case_patterns: error
+    literal_only_boolean_expressions: error
+    no_adjacent_strings_in_list: error
+    no_duplicate_case_values: error
+    no_logic_in_create_state: error
+    no_self_assignments: error
+    no_wildcard_variable_uses: error
+    prefer_relative_imports: error
+    prefer_void_to_null: error
+    test_types_in_equals: error
+    throw_in_finally: error
+    unnecessary_statements: error
+    unrelated_type_equality_checks: error
+    unsafe_html: error
+    use_build_context_synchronously: error
+    use_key_in_widget_constructors: error
+    valid_regexps: error
+
+    # style rules
+    always_declare_return_types: error
+    always_put_required_named_parameters_first: error
+    annotate_overrides: error
+    annotate_redeclares: error
+    # avoid_annotating_with_dynamic: error
+    avoid_bool_literals_in_conditional_expressions: error
+    # avoid_catches_without_on_clauses: error
+    avoid_catching_errors: error
+    avoid_equals_and_hash_code_on_mutable_classes: error
+    avoid_escaping_inner_quotes: error
+    avoid_field_initializers_in_const_classes: error
+    avoid_function_literals_in_foreach_calls: error
+    avoid_implementing_value_types: error
+    avoid_init_to_null: error
+    avoid_null_checks_in_equality_operators: error
+    # avoid_positional_boolean_parameters: error
+    avoid_private_typedef_functions: error
+    avoid_redundant_argument_values: error
+    avoid_renaming_method_parameters: error
+    avoid_return_types_on_setters: error
+    avoid_returning_null_for_void: error
+    avoid_returning_this: error
+    # avoid_setters_without_getters: error
+    avoid_shadowing_type_parameters: error
+    avoid_single_cascade_in_expression_statements: error
+    avoid_types_on_closure_parameters: error
+    avoid_unnecessary_containers: error
+    avoid_unused_constructor_parameters: error
+    await_only_futures: error
+    camel_case_extensions: error
+    camel_case_types: error
+    # cascade_invocations: error
+    cast_nullable_to_non_nullable: error
+    combinators_ordering: error
+    conditional_uri_does_not_exist: error
+    constant_identifier_names: error
+    curly_braces_in_flow_control_structures: error
+    dangling_library_doc_comments: error
+    deprecated_consistency: error
+    do_not_use_environment: error
+    empty_catches: error
+    empty_constructor_bodies: error
+    eol_at_end_of_file: info
+    exhaustive_cases: error
+    file_names: error
+    implementation_imports: error
+    implicit_call_tearoffs: error
+    leading_newlines_in_multiline_strings: error
+    library_annotations: error
+    library_names: error
+    library_prefixes: error
+    library_private_types_in_public_api: error
+    matching_super_parameters: error
+    missing_whitespace_between_adjacent_strings: error
+    no_leading_underscores_for_library_prefixes: error
+    no_leading_underscores_for_local_identifiers: error
+    no_literal_bool_comparisons: error
+    # no_runtimeType_toString: error
+    non_constant_identifier_names: error
+    noop_primitive_operations: error
+    null_check_on_nullable_type_parameter: error
+    null_closures: error
+    omit_local_variable_types: error
+    one_member_abstracts: error
+    only_throw_errors: error
+    overridden_fields: error
+    package_api_docs: warning
+    package_prefixed_library_names: error
+    prefer_adjacent_string_concatenation: error
+    prefer_asserts_in_initializer_lists: error
+    prefer_asserts_with_message: error
+    prefer_collection_literals: error
+    prefer_conditional_assignment: error
+    prefer_const_constructors: error
+    prefer_const_constructors_in_immutables: error
+    prefer_const_declarations: error
+    prefer_const_literals_to_create_immutables: error
+    prefer_contains: error
+    # prefer_expression_function_bodies: error
+    prefer_final_fields: error
+    prefer_final_in_for_each: error
+    prefer_final_locals: error
+    # prefer_final_parameters: error
+    prefer_for_elements_to_map_fromIterable: error
+    prefer_foreach: error
+    prefer_function_declarations_over_variables: error
+    prefer_generic_function_type_aliases: error
+    prefer_if_elements_to_conditional_expressions: error
+    prefer_if_null_operators: error
+    prefer_initializing_formals: error
+    prefer_inlined_adds: error
+    prefer_int_literals: error
+    prefer_interpolation_to_compose_strings: error
+    prefer_is_empty: error
+    prefer_is_not_empty: error
+    prefer_is_not_operator: error
+    prefer_iterable_whereType: error
+    prefer_mixin: error
+    prefer_null_aware_method_calls: error
+    prefer_null_aware_operators: error
+    prefer_single_quotes: error
+    prefer_spread_collections: error
+    prefer_typing_uninitialized_variables: error
+    provide_deprecation_message: error
+    # public_member_api_docs: warning
+    recursive_getters: error
+    require_trailing_commas: error
+    sized_box_for_whitespace: error
+    sized_box_shrink_expand: error
+    slash_for_doc_comments: error
+    sort_child_properties_last: error
+    sort_constructors_first: error
+    sort_unnamed_constructors_first: error
+    tighten_type_of_initializing_formals: error
+    # type_annotate_public_apis: error
+    type_init_formals: error
+    type_literal_in_constant_pattern: error
+    # unawaited_futures: error
+    unnecessary_await_in_return: error
+    unnecessary_brace_in_string_interps: error
+    unnecessary_breaks: error
+    unnecessary_const: error
+    unnecessary_constructor_name: error
+    unnecessary_getters_setters: error
+    # unnecessary_lambdas: error
+    unnecessary_late: error
+    unnecessary_library_directive: error
+    unnecessary_new: error
+    unnecessary_null_aware_assignments: error
+    unnecessary_null_aware_operator_on_extension_on_nullable: error
+    unnecessary_null_checks: error
+    unnecessary_null_in_if_null_operators: error
+    unnecessary_nullable_for_final_variable_declarations: error
+    unnecessary_overrides: error
+    unnecessary_parenthesis: error
+    # unnecessary_raw_strings: error
+    unnecessary_string_escapes: error
+    unnecessary_string_interpolations: error
+    unnecessary_this: error
+    unnecessary_to_list_in_spreads: error
+    unreachable_from_main: error
+    use_decorated_box: error
+    use_enums: error
+    use_full_hex_values_for_flutter_colors: error
+    use_function_type_syntax_for_parameters: error
+    use_if_null_to_convert_nulls_to_bools: error
+    use_is_even_rather_than_modulo: error
+    # use_late_for_private_fields_and_variables: error
+    use_named_constants: error
+    use_raw_strings: error
+    use_rethrow_when_possible: error
+    use_string_buffers: info
+    use_string_in_part_of_directives: error
+    use_super_parameters: error
+    use_test_throws_matchers: error
+    use_to_and_as_if_applicable: error
+    void_checks: error
+
+    # pub rules
+    depend_on_referenced_packages: error
+    package_names: error
+    secure_pubspec_urls: error
+
+linter:
+  rules:
+    # error rules
+    always_use_package_imports: true
+    avoid_dynamic_calls: true
+    avoid_empty_else: true
+    avoid_relative_lib_imports: true
+    avoid_print: true
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    avoid_types_as_parameter_names: true
+    avoid_web_libraries_in_flutter: true
+    cancel_subscriptions: true
+    close_sinks: true
+    collection_methods_unrelated_type: true
+    # comment_references: true
+    control_flow_in_finally: true
+    deprecated_member_use_from_same_package: true
+    # discarded_futures: true
+    empty_statements: true
+    hash_and_equals: true
+    implicit_reopen: true
+    invalid_case_patterns: true
+    literal_only_boolean_expressions: true
+    no_adjacent_strings_in_list: true
+    no_duplicate_case_values: true
+    no_logic_in_create_state: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
+    prefer_void_to_null: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_statements: true
+    unrelated_type_equality_checks: true
+    unsafe_html: true
+    use_build_context_synchronously: true
+    use_key_in_widget_constructors: true
+    valid_regexps: true
+
+    # style rules
+    always_declare_return_types: true
+    always_put_required_named_parameters_first: true
+    annotate_overrides: true
+    annotate_redeclares: true
+    # avoid_annotating_with_dynamic: true
+    avoid_bool_literals_in_conditional_expressions: true
+    # avoid_catches_without_on_clauses: true
+    avoid_catching_errors: true
+    avoid_equals_and_hash_code_on_mutable_classes: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_implementing_value_types: true
+    avoid_init_to_null: true
+    avoid_null_checks_in_equality_operators: true
+    # avoid_positional_boolean_parameters: true
+    avoid_private_typedef_functions: true
+    avoid_redundant_argument_values: true
+    avoid_renaming_method_parameters: true
+    avoid_return_types_on_setters: true
+    avoid_returning_null_for_void: true
+    avoid_returning_this: true
+    # avoid_setters_without_getters: true
+    avoid_shadowing_type_parameters: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_types_on_closure_parameters: true
+    avoid_unnecessary_containers: true
+    avoid_unused_constructor_parameters: true
+    await_only_futures: true
+    camel_case_extensions: true
+    camel_case_types: true
+    cascade_invocations: false
+    cast_nullable_to_non_nullable: true
+    combinators_ordering: true
+    conditional_uri_does_not_exist: true
+    constant_identifier_names: true
+    curly_braces_in_flow_control_structures: true
+    dangling_library_doc_comments: true
+    deprecated_consistency: true
+    do_not_use_environment: true
+    empty_catches: true
+    empty_constructor_bodies: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    file_names: true
+    implementation_imports: true
+    implicit_call_tearoffs: true
+    leading_newlines_in_multiline_strings: true
+    library_annotations: true
+    library_names: true
+    library_prefixes: true
+    library_private_types_in_public_api: true
+    matching_super_parameters: true
+    missing_whitespace_between_adjacent_strings: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    no_literal_bool_comparisons: true
+    # no_runtimeType_toString: true
+    non_constant_identifier_names: true
+    noop_primitive_operations: true
+    null_check_on_nullable_type_parameter: true
+    null_closures: true
+    omit_local_variable_types: true
+    one_member_abstracts: true
+    only_throw_errors: true
+    overridden_fields: true
+    package_api_docs: true
+    package_prefixed_library_names: true
+    prefer_adjacent_string_concatenation: true
+    prefer_asserts_in_initializer_lists: true
+    prefer_asserts_with_message: true
+    prefer_collection_literals: true
+    prefer_conditional_assignment: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_contains: true
+    # prefer_expression_function_bodies: true
+    prefer_final_fields: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    # prefer_final_parameters: true
+    prefer_for_elements_to_map_fromIterable: true
+    prefer_foreach: true
+    prefer_function_declarations_over_variables: true
+    prefer_generic_function_type_aliases: true
+    prefer_if_elements_to_conditional_expressions: true
+    prefer_if_null_operators: true
+    prefer_initializing_formals: true
+    prefer_inlined_adds: true
+    prefer_int_literals: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_is_empty: true
+    prefer_is_not_empty: true
+    prefer_is_not_operator: true
+    prefer_iterable_whereType: true
+    prefer_mixin: true
+    prefer_null_aware_method_calls: true
+    prefer_null_aware_operators: true
+    prefer_single_quotes: true
+    prefer_spread_collections: true
+    prefer_typing_uninitialized_variables: true
+    provide_deprecation_message: true
+    # public_member_api_docs: true
+    recursive_getters: true
+    require_trailing_commas: true
+    sized_box_for_whitespace: true
+    sized_box_shrink_expand: true
+    slash_for_doc_comments: true
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    sort_unnamed_constructors_first: true
+    tighten_type_of_initializing_formals: true
+    # type_annotate_public_apis: true
+    type_init_formals: true
+    type_literal_in_constant_pattern: true
+    unawaited_futures: false
+    unnecessary_await_in_return: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_breaks: true
+    unnecessary_const: true
+    unnecessary_constructor_name: true
+    unnecessary_getters_setters: true
+    unnecessary_lambdas: false
+    unnecessary_late: true
+    unnecessary_library_directive: true
+    unnecessary_new: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_null_aware_operator_on_extension_on_nullable: true
+    unnecessary_null_checks: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    unnecessary_overrides: true
+    unnecessary_parenthesis: true
+    # unnecessary_raw_strings: true
+    unnecessary_string_escapes: true
+    unnecessary_string_interpolations: true
+    unnecessary_this: true
+    unnecessary_to_list_in_spreads: true
+    unreachable_from_main: true
+    use_decorated_box: true
+    use_enums: true
+    use_full_hex_values_for_flutter_colors: true
+    use_function_type_syntax_for_parameters: true
+    use_if_null_to_convert_nulls_to_bools: true
+    use_is_even_rather_than_modulo: true
+    # use_late_for_private_fields_and_variables: false
+    use_named_constants: true
+    use_raw_strings: true
+    use_rethrow_when_possible: true
+    use_string_buffers: true
+    use_string_in_part_of_directives: true
+    use_super_parameters: true
+    use_test_throws_matchers: true
+    use_to_and_as_if_applicable: true
+    void_checks: true
+
+    # pub rules
+    depend_on_referenced_packages: true
+    package_names: true
+    secure_pubspec_urls: true
