[chore] flavor, firebase 설정

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -35,6 +38,26 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+        }
+    }
+
+    flavorDimensions += "basic-type"
+
+    productFlavors {
+        dev {
+            dimension = "basic-type"
+            resValue "string", "app_name", "Done Stuff Dev"
+            applicationIdSuffix = ".dev"
+        }
+        stg {
+            dimension = "basic-type"
+            resValue "string", "app_name", "Done Stuff Stg"
+            applicationIdSuffix = ".stg"
+        }
+        prd {
+            dimension = "basic-type"
+            resValue "string", "app_name", "Done Stuff"
+            applicationIdSuffix = ""
         }
     }
 }
