--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,1 +1,4 @@
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug-dev.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug-stg.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug-prd.xcconfig"
 #include "Generated.xcconfig"
