--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,1 +1,7 @@
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release-dev.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release-stg.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release-prd.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile-dev.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile-stg.xcconfig"
+#include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile-prd.xcconfig"
 #include "Generated.xcconfig"
