--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: done_stuff
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -10,10 +10,26 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Core
+  firebase_core: ^3.6.0
+  flutter_riverpod: ^2.5.3
+  riverpod_annotation: ^2.5.3
+  flutter_native_splash: ^2.4.1
+
+  # UI
+
+  # Utility
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  custom_lint:
   flutter_lints: ^4.0.0
+  riverpod_generator: ^2.4.3
+  riverpod_lint: ^2.3.13
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
   uses-material-design: true
