--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_riverpod: ^2.5.3
   riverpod_annotation: ^2.5.3
   flutter_native_splash: ^2.4.1
+  go_router: ^14.3.0
 
   # UI
 
