--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# VSCode
+.vscode/settings.json
+
 # FVM Version Cache
 .fvm/
 .fvmrc
