--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,24 @@ dependencies:
   riverpod_annotation: ^2.5.3
   flutter_native_splash: ^2.4.1
   go_router: ^14.3.0
+  firebase_auth: ^5.3.1
+  google_sign_in: ^6.2.1
 
   # UI
+  loader_overlay: ^4.0.3
+  flutter_svg: ^2.0.10+1
+  gap: ^3.0.1
+  flutter_keyboard_visibility: ^6.0.0
 
   # Utility
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
 
   build_runner:
   custom_lint:
-  flutter_lints: ^4.0.0
   riverpod_generator: ^2.4.3
   riverpod_lint: ^2.3.13
   flutter_launcher_icons: ^0.14.1
